<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_blue_gecko">Wireless Gecko</string>

    <string name="title_activity_demo_screen">Bluetooth Applications</string>

    <string name="select_device">Select a Wireless Gecko Device</string>
    <string name="tab_blue_geckos">Wireless Gecko</string>

    <!-- Light Demo -->
    <string name="demo_item_light_title">Connected Lighting Demo</string>
    <string name="demo_light_text">Dynamic multiprotocol application for Wireless Gecko SoCs showcasing Bluetooth operating simultaneously with other wireless protocols</string>

    <string name="demo_item_range_title">Range Test Demo</string>
    <string name="demo_range_text">Evaluate the link budget and communication range of the Wireless Gecko SoCs using various wireless radio configurations</string>
    <string name="demo_range_select_mode">Select Device Mode</string>
    <string name="demo_range_toast_error">Device error! Disconnecting!</string>
    <string name="demo_range_toast_reconnecting">Reconnecting device…</string>

    <string name="demo_range_mode_tx">TX Mode</string>
    <string name="demo_range_mode_rx">RX Mode</string>

    <string name="range_device_info">DEVICE INFO:</string>

    <string name="range_tx_transmitted">Transmitted:</string>
    <string name="range_rx_rx">RX: %1$d/%2$d</string>
    <string name="range_rx_rssi">RSSI: %1$d dBm</string>
    <string name="range_rx_ma">MA: %1$.1f%%</string>
    <string name="range_rx_per">PER: %1$.1f%%</string>
    <string name="range_rx_rssi_level">RSSI Level</string>

    <string name="range_config_phy_config">PHY Configuration</string>
    <string name="range_config_tx_power">TX Power [dBm]:</string>
    <string name="range_config_payload_length">Payload Length:</string>
    <string name="range_config_ma_window_size">MA Window Size:</string>
    <string name="range_config_channel_no">Channel Number:</string>
    <string name="range_config_packet_count">Packet Count:</string>
    <string name="range_config_packet_count_repeat">Repeat</string>
    <string name="range_config_remote_id">Remote ID:</string>
    <string name="range_config_self_id">Self ID:</string>
    <string name="range_config_uart_log_enable">UART Log Enable:</string>

    <string name="range_tx_start">Start TX</string>
    <string name="range_tx_stop">Stop TX</string>
    <string name="range_rx_start">Start RX</string>
    <string name="range_rx_waiting">Waiting for device…</string>
</resources>
