<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/range_root_view">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    android:text="@string/range_device_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="TextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_device_name"
                        android:layout_weight="1"/>

                <TextView
                        android:text="TextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_model_number"
                        android:textAllCaps="true"
                        android:layout_weight="1"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/range_item_separator"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:id="@+id/range_transmitted_layout">

                <TextView
                        android:text="@string/range_tx_transmitted"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="@dimen/text_size_increased_twice"/>

                <TextView
                        android:text="0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_test_packet_count"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_increased_twice"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/range_rx_data_row_1">

                <TextView
                        android:text="@string/range_rx_rx"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_test_rx"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_increased_twice"/>

                <TextView
                        android:text="@string/range_rx_rssi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_test_rssi"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_increased_twice"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/range_rx_data_row_2">

                <TextView
                        android:text="@string/range_rx_ma"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_test_ma"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_increased_twice"/>

                <TextView
                        android:text="@string/range_rx_per"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_test_per"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_increased_twice"/>

            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:id="@+id/range_rx_chart"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"/>

            <TextView
                    android:text="@string/range_rx_rssi_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:textColor="@color/silabs_black"
                    android:gravity="center"
                    android:id="@+id/range_rx_chart_label"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/range_item_separator"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:id="@+id/phy_config_layout">

                <TextView
                    android:text="@string/range_config_phy_config"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <com.siliconlabs.bledemo.Views.BlockableSpinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/range_spinner_phy_config"
                    android:background="@drawable/range_value_background"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                    android:text="@string/range_config_tx_power"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/range_tx_power_layout_1"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:id="@+id/range_tx_power_layout_2">

                <SeekBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_seek_tx_power"
                        android:layout_weight="6"
                        android:layout_gravity="center_vertical"/>

                <com.siliconlabs.bledemo.Views.BlockableSpinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_spinner_tx_power"
                        android:background="@drawable/range_value_background"
                        android:layout_weight="2"/>
            </LinearLayout>

            <TextView
                    android:text="@string/range_config_payload_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                <SeekBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_seek_payload_length"
                        android:layout_weight="6"
                        android:layout_gravity="center_vertical"/>

                <com.siliconlabs.bledemo.Views.BlockableSpinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_spinner_payload_length"
                        android:background="@drawable/range_value_background"
                        android:layout_weight="2"/>

            </LinearLayout>

            <TextView
                    android:text="@string/range_config_ma_window_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                <SeekBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_seek_ma_window_size"
                        android:layout_weight="6"
                        android:layout_gravity="center_vertical"/>

                <com.siliconlabs.bledemo.Views.BlockableSpinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_spinner_ma_window_size"
                        android:background="@drawable/range_value_background"
                        android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/range_config_channel_no" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <com.siliconlabs.bledemo.Views.BlockableSpinner
                        android:id="@+id/range_spinner_channel_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@drawable/range_value_background" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="2" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/range_config_packet_count" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <com.siliconlabs.bledemo.Views.BlockableSpinner
                        android:id="@+id/range_spinner_packet_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@drawable/range_value_background" />

                    <CheckBox
                        android:id="@+id/range_check_packet_repeat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="2"
                        android:text="@string/range_config_packet_count_repeat" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/range_config_remote_id" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <com.siliconlabs.bledemo.Views.BlockableSpinner
                        android:id="@+id/range_spinner_remote_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@drawable/range_value_background" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="2" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/range_config_self_id" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <com.siliconlabs.bledemo.Views.BlockableSpinner
                        android:id="@+id/range_spinner_self_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@drawable/range_value_background" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="2" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                <TextView
                        android:text="@string/range_config_uart_log_enable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        />

                <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/range_check_uart_log"
                        android:layout_weight="3"/>

                <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="2"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/range_item_separator"/>

        <Button
                android:text="@string/range_rx_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/range_test_start_stop"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_proprietary"
                android:id="@+id/range_test_logo"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"/>
    </FrameLayout>
</LinearLayout>